Added functionality to upload existing scanned documents

--- a/ui/ui_document_downloader_win.ui
+++ b/ui/ui_document_downloader_win.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>690</width>
-    <height>626</height>
+    <height>613</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -72,6 +72,13 @@
          </property>
         </widget>
        </item>
+       <item>
+        <widget class="QRadioButton" name="rbScannedDoc">
+         <property name="text">
+          <string>Scanned Documents</string>
+         </property>
+        </widget>
+       </item>
       </layout>
      </widget>
     </item>
@@ -132,10 +139,17 @@
        <string>Local Document Folders:</string>
       </property>
       <layout class="QGridLayout" name="gridLayout_6">
+       <item row="5" column="0">
+        <widget class="QLabel" name="label_2">
+         <property name="text">
+          <string>Scanned Cert.:</string>
+         </property>
+        </widget>
+       </item>
        <item row="4" column="0">
         <widget class="QLabel" name="label_12">
          <property name="text">
-          <string>ID Picture</string>
+          <string>ID Picture:</string>
          </property>
         </widget>
        </item>
@@ -238,7 +252,7 @@
        <item row="3" column="0">
         <widget class="QLabel" name="label_11">
          <property name="text">
-          <string>House Picture</string>
+          <string>House Picture:</string>
          </property>
         </widget>
        </item>
@@ -285,6 +299,30 @@
        </item>
        <item row="4" column="4">
         <widget class="QPushButton" name="btnIdPic">
+         <property name="text">
+          <string>Browse ...</string>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="1">
+        <widget class="QLineEdit" name="edtScannedDoc"/>
+       </item>
+       <item row="5" column="2">
+        <widget class="QCheckBox" name="cbScannedDoc">
+         <property name="text">
+          <string>Download</string>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="3">
+        <widget class="QToolButton" name="tbScannedDoc">
+         <property name="text">
+          <string>...</string>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="4">
+        <widget class="QPushButton" name="btnScannedDoc">
          <property name="text">
           <string>Browse ...</string>
          </property>
