--- a/ui/ui_document_downloader_win.ui
+++ b/ui/ui_document_downloader_win.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Download Documents</string>
+   <string>Download and Upload Documents</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout_4">
@@ -21,7 +21,7 @@
     <item>
      <widget class="QTabWidget" name="twDocument">
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="tbDownload">
        <attribute name="title">
@@ -362,7 +362,7 @@
              <item row="0" column="0">
               <widget class="QLabel" name="label_2">
                <property name="text">
-                <string>Certificate</string>
+                <string>Certificate:</string>
                </property>
               </widget>
              </item>
@@ -397,7 +397,7 @@
              <item row="3" column="0">
               <widget class="QLabel" name="label_13">
                <property name="text">
-                <string>ID Document</string>
+                <string>ID Document:</string>
                </property>
               </widget>
              </item>
@@ -539,7 +539,7 @@
      </layout>
     </item>
     <item>
-     <widget class="QGroupBox" name="groupBox_9">
+     <widget class="QGroupBox" name="gbProgress">
       <property name="title">
        <string>Download progress:</string>
       </property>
