--- a/stdm/ui/composer/ui_composer_chart_config.ui
+++ b/stdm/ui/composer/ui_composer_chart_config.ui
@@ -224,7 +224,7 @@
   <customwidget>
    <class>ReferencedTableEditor</class>
    <extends>QWidget</extends>
-   <header>.referenced_table_editor</header>
+   <header>stdm.ui.composer.referenced_table_editor</header>
    <container>1</container>
   </customwidget>
   <customwidget>
