--- a/stdm/ui/composer/ui_composer_photo_data_source.ui
+++ b/stdm/ui/composer/ui_composer_photo_data_source.ui
@@ -92,7 +92,7 @@
   <customwidget>
    <class>ReferencedTableEditor</class>
    <extends>QWidget</extends>
-   <header>.referenced_table_editor</header>
+   <header>stdm.ui.composer.referenced_table_editor</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
