--- a/stdm/ui/ui_image_export_settings.ui
+++ b/stdm/ui/ui_image_export_settings.ui
@@ -19,10 +19,6 @@
      <property name="text">
       <string>...</string>
      </property>
-     <property name="icon">
-      <iconset resource="../resources.qrc">
-       <normaloff>:/plugins/stdm/images/icons/open_file.png</normaloff>:/plugins/stdm/images/icons/open_file.png</iconset>
-     </property>
     </widget>
    </item>
    <item row="5" column="0" colspan="2">
@@ -211,7 +207,7 @@
        </spacer>
       </item>
       <item row="1" column="2">
-       <widget class="QgsColorButtonV2" name="btn_color">
+       <widget class="QgsColorButton" name="btn_color">
         <property name="text">
          <string>...</string>
         </property>
@@ -227,14 +223,11 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>QgsColorButtonV2</class>
+   <class>QgsColorButton</class>
    <extends>QToolButton</extends>
    <header>qgis.gui</header>
   </customwidget>
  </customwidgets>
- <resources>
-  <include location="../resources.qrc"/>
- </resources>
  <connections>
   <connection>
    <sender>buttonBox</sender>
