--- a/stdm/ui/wizard/ui_stdm_config.ui
+++ b/stdm/ui/wizard/ui_stdm_config.ui
@@ -152,10 +152,6 @@
         <property name="text">
          <string>Change</string>
         </property>
-        <property name="icon">
-         <iconset resource="../../resources.qrc">
-          <normaloff>:/plugins/stdm/images/icons/open_file.png</normaloff>:/plugins/stdm/images/icons/open_file.png</iconset>
-        </property>
        </widget>
       </item>
       <item row="1" column="2">
@@ -168,10 +164,6 @@
         </property>
         <property name="text">
          <string>Change</string>
-        </property>
-        <property name="icon">
-         <iconset resource="../../resources.qrc">
-          <normaloff>:/plugins/stdm/images/icons/open_file.png</normaloff>:/plugins/stdm/images/icons/open_file.png</iconset>
         </property>
        </widget>
       </item>
@@ -244,10 +236,6 @@
         </property>
         <property name="text">
          <string>Change</string>
-        </property>
-        <property name="icon">
-         <iconset resource="../../resources.qrc">
-          <normaloff>:/plugins/stdm/images/icons/open_file.png</normaloff>:/plugins/stdm/images/icons/open_file.png</iconset>
         </property>
        </widget>
       </item>
@@ -328,10 +316,6 @@
            <property name="text">
             <string>Copy profile</string>
            </property>
-           <property name="icon">
-            <iconset resource="../../resources.qrc">
-             <normaloff>:/plugins/stdm/images/icons/composer_table.png</normaloff>:/plugins/stdm/images/icons/composer_table.png</iconset>
-           </property>
           </widget>
          </item>
          <item row="0" column="4">
@@ -350,10 +334,6 @@
            </property>
            <property name="text">
             <string>Delete profile</string>
-           </property>
-           <property name="icon">
-            <iconset resource="../../resources.qrc">
-             <normaloff>:/plugins/stdm/images/icons/remove.png</normaloff>:/plugins/stdm/images/icons/remove.png</iconset>
            </property>
           </widget>
          </item>
@@ -420,10 +400,6 @@
            </property>
            <property name="text">
             <string>New profile</string>
-           </property>
-           <property name="icon">
-            <iconset resource="../../resources.qrc">
-             <normaloff>:/plugins/stdm/images/icons/add.png</normaloff>:/plugins/stdm/images/icons/add.png</iconset>
            </property>
           </widget>
          </item>
@@ -510,10 +486,6 @@
            <property name="text">
             <string/>
            </property>
-           <property name="icon">
-            <iconset resource="../../resources.qrc">
-             <normaloff>:/plugins/stdm/images/icons/add.png</normaloff>:/plugins/stdm/images/icons/add.png</iconset>
-           </property>
           </widget>
          </item>
          <item>
@@ -533,10 +505,6 @@
            <property name="text">
             <string/>
            </property>
-           <property name="icon">
-            <iconset resource="../../resources.qrc">
-             <normaloff>:/plugins/stdm/images/icons/edit.png</normaloff>:/plugins/stdm/images/icons/edit.png</iconset>
-           </property>
           </widget>
          </item>
          <item>
@@ -555,10 +523,6 @@
            </property>
            <property name="text">
             <string/>
-           </property>
-           <property name="icon">
-            <iconset resource="../../resources.qrc">
-             <normaloff>:/plugins/stdm/images/icons/delete.png</normaloff>:/plugins/stdm/images/icons/delete.png</iconset>
            </property>
           </widget>
          </item>
@@ -700,10 +664,6 @@
              <property name="text">
               <string/>
              </property>
-             <property name="icon">
-              <iconset resource="../../resources.qrc">
-               <normaloff>:/plugins/stdm/images/icons/add.png</normaloff>:/plugins/stdm/images/icons/add.png</iconset>
-             </property>
              <property name="iconSize">
               <size>
                <width>20</width>
@@ -728,10 +688,6 @@
              </property>
              <property name="text">
               <string/>
-             </property>
-             <property name="icon">
-              <iconset resource="../../resources.qrc">
-               <normaloff>:/plugins/stdm/images/icons/edit.png</normaloff>:/plugins/stdm/images/icons/edit.png</iconset>
              </property>
              <property name="iconSize">
               <size>
@@ -763,10 +719,6 @@
              </property>
              <property name="text">
               <string/>
-             </property>
-             <property name="icon">
-              <iconset resource="../../resources.qrc">
-               <normaloff>:/plugins/stdm/images/icons/delete.png</normaloff>:/plugins/stdm/images/icons/delete.png</iconset>
              </property>
             </widget>
            </item>
@@ -904,10 +856,6 @@
              <property name="text">
               <string/>
              </property>
-             <property name="icon">
-              <iconset resource="../../resources.qrc">
-               <normaloff>:/plugins/stdm/images/icons/add.png</normaloff>:/plugins/stdm/images/icons/add.png</iconset>
-             </property>
             </widget>
            </item>
            <item>
@@ -927,10 +875,6 @@
              <property name="text">
               <string/>
              </property>
-             <property name="icon">
-              <iconset resource="../../resources.qrc">
-               <normaloff>:/plugins/stdm/images/icons/edit.png</normaloff>:/plugins/stdm/images/icons/edit.png</iconset>
-             </property>
             </widget>
            </item>
            <item>
@@ -949,10 +893,6 @@
              </property>
              <property name="text">
               <string/>
-             </property>
-             <property name="icon">
-              <iconset resource="../../resources.qrc">
-               <normaloff>:/plugins/stdm/images/icons/delete.png</normaloff>:/plugins/stdm/images/icons/delete.png</iconset>
              </property>
             </widget>
            </item>
@@ -1037,10 +977,6 @@
              <property name="text">
               <string/>
              </property>
-             <property name="icon">
-              <iconset resource="../../resources.qrc">
-               <normaloff>:/plugins/stdm/images/icons/add.png</normaloff>:/plugins/stdm/images/icons/add.png</iconset>
-             </property>
             </widget>
            </item>
            <item>
@@ -1060,10 +996,6 @@
              <property name="text">
               <string/>
              </property>
-             <property name="icon">
-              <iconset resource="../../resources.qrc">
-               <normaloff>:/plugins/stdm/images/icons/edit.png</normaloff>:/plugins/stdm/images/icons/edit.png</iconset>
-             </property>
             </widget>
            </item>
            <item>
@@ -1082,10 +1014,6 @@
              </property>
              <property name="text">
               <string/>
-             </property>
-             <property name="icon">
-              <iconset resource="../../resources.qrc">
-               <normaloff>:/plugins/stdm/images/icons/delete.png</normaloff>:/plugins/stdm/images/icons/delete.png</iconset>
              </property>
             </widget>
            </item>
@@ -1270,7 +1198,7 @@
            </sizepolicy>
           </property>
           <property name="text">
-           <string>Allow multiple parties to be 
+           <string>Allow multiple parties to be
 linked to a single spatial unit</string>
           </property>
          </widget>
@@ -1314,10 +1242,6 @@ linked to a single spatial unit</string>
          <widget class="QPushButton" name="btn_sp_units_tenure">
           <property name="text">
            <string>Spatial Unit Tenure Types...</string>
-          </property>
-          <property name="icon">
-           <iconset resource="../../resources.qrc">
-            <normaloff>:/plugins/stdm/images/icons/social_tenure.png</normaloff>:/plugins/stdm/images/icons/social_tenure.png</iconset>
           </property>
          </widget>
         </item>
@@ -1432,10 +1356,6 @@ linked to a single spatial unit</string>
           <property name="text">
            <string>Custom Attributes...</string>
           </property>
-          <property name="icon">
-           <iconset resource="../../resources.qrc">
-            <normaloff>:/plugins/stdm/images/icons/column.png</normaloff>:/plugins/stdm/images/icons/column.png</iconset>
-          </property>
          </widget>
         </item>
         <item>
@@ -1512,7 +1432,7 @@ linked to a single spatial unit</string>
   <customwidget>
    <class>STRSpatialUnitListView</class>
    <extends>QListView</extends>
-   <header>spatial_unit_list_view</header>
+   <header>stdm.ui.wizard.spatial_unit_list_view</header>
   </customwidget>
  </customwidgets>
  <tabstops>
@@ -1535,8 +1455,5 @@ linked to a single spatial unit</string>
   <tabstop>btnEditLkupValue</tabstop>
   <tabstop>txtLicense</tabstop>
  </tabstops>
- <resources>
-  <include location="../../resources.qrc"/>
- </resources>
  <connections/>
 </ui>
