--- a/stdm/ui/ui_import_data.ui
+++ b/stdm/ui/ui_import_data.ui
@@ -300,7 +300,7 @@
                                                         </size>
                                                     </property>
                                                     <property name="text">
-                                                        <string>Unsellect All</string>
+                                                        <string>Unselect All</string>
                                                     </property>
                                                 </widget>
                                             </item>
